<resources>
    <string name="app_name">Soccer Teams</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_listado">listadose</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtcampgandos">N° de campeonatos ganados</string>
    <string name="txtdirector">Director tecnico</string>
    <string name="txtname">Name</string>
    <string name="txtagregar">btnagregar</string>
    <string name="txtbtnagregar">AGREGAR</string>
    <string name="txtnequipo">Nombre equipo</string>
    <string name="txtciudad">Ciudad</string>
</resources>
